# Cropper

./: CMakeLists.txt  README.md
include/: crop.h
src/: main.cpp  main.cu  semhandling.py
